--- a/lab7/lab7.ipynb
+++ b/lab7/lab7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e8cffae8-7647-4939-8362-c387d03a6079",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "50bd3ada-974a-4af5-b760-1e355affc93b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7b0a3976-c29a-4d0f-b1b5-3109185edf2e",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "980ca437-d776-45a3-aebd-a3632f3aea64",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ff05532b",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9a158ccf-9493-4f57-aa26-67999e044248",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f0a7a05a-a933-4741-9fc3-b15e19e4d0eb",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "array([8, 9, 3, ..., 5, 2, 6])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "88512737-1616-422f-a78a-d528b07c2dd3",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d84b7ae0-6cc0-4d24-8ac4-b8a9b0cf6880",
    "metadata": {},
    "outputs": [
@@ -169,21 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "eea8eb4a-c059-4fd4-ae29-fffdf10e5d3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "lista2 = []\n",
     "for i in cf:\n",
-    "    lista2.append(i[i.argmax()])\n",
+    "    lista2.append(i.argmax())\n",
     "lista2 = list(set(lista2))\n",
-    "lista2.sort(reverse=True)"
+    "lista2.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c967dc48-43a0-43f5-a98c-00243abf731d",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5053, 4863, 4581, 4399, 4326, 4293, 4115, 3728, 3462, 2129]\n"
+      "[0, 1, 3, 4, 5, 6, 8, 9]\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "31832a6e",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "905a78b7",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5053, 4863, 4581, 4399, 4326, 4293, 4115, 3728, 3462, 2129]\n"
+      "[0, 1, 3, 4, 5, 6, 8, 9]\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c1014d39",
    "metadata": {},
    "outputs": [],
@@ -243,25 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "6ddb2cc3-2d88-4bf5-b80d-b37d016a199e",
    "metadata": {},
    "outputs": [],
    "source": [
     "lista3 = []\n",
-    "lista4 =[]\n",
+    "lista4 = []\n",
     "for i in range(0, 300):\n",
-    "    for j in range(0, 300):\n",
-    "        if i != j:\n",
-    "            lista3.append(np.linalg.norm(X[i]-X[j]))\n",
+    "    for j in range(i+1, 300):\n",
+    "        lista3.append(np.linalg.norm(X[i]-X[j]))\n",
     "lista3.sort()\n",
     "lista4 = lista3[:10]\n",
-    "lista4.sort(reverse = True)"
+    "lista4.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "bc49bf39",
    "metadata": {},
    "outputs": [],
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "edf49e63",
    "metadata": {},
    "outputs": [
@@ -280,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[638.4520342202694, 638.4520342202694, 638.289902787127, 638.289902787127, 636.2460215985637, 636.2460215985637, 524.325280717991, 524.325280717991, 419.583126448145, 419.583126448145]\n"
+      "[419.583126448145, 524.325280717991, 636.2460215985637, 638.289902787127, 638.4520342202694, 653.3475338592776, 669.5827058698575, 703.4898719953259, 723.5613311945298, 739.4200430066796]\n"
      ]
     }
    ],
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "65b81f55-b63d-4fde-89c5-0e00ab5445d9",
    "metadata": {},
    "outputs": [
@@ -301,19 +300,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "454.4971778714269\n"
+      "526.7181429215666\n"
      ]
     }
    ],
    "source": [
-    "lista4.sort()\n",
     "s = (lista4[0] + lista4[1] + lista4[2]) / 3.0\n",
     "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "393cb0ac-4826-447e-a647-8b89f2143584",
    "metadata": {},
    "outputs": [],
@@ -329,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "da5a5e45",
    "metadata": {},
    "outputs": [
@@ -337,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23, 23, 17]\n"
+      "[10, 12, 6]\n"
      ]
     }
    ],
@@ -347,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "id": "be134e91",
    "metadata": {},
    "outputs": [],
@@ -358,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "0d517150",
    "metadata": {},
    "outputs": [
@@ -366,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23, 23, 17]\n"
+      "[10, 12, 6]\n"
      ]
     }
    ],
